--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.4",
+    "angular": "~1.4.8",
+    "backbone": "~1.2.3",
+    "react": "~0.14.3"
+  }
 }
