--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "homepage": "https://github.com/moolbits/my-build-system#readme",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "browser-sync": "^2.10.1",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.1"
   }
 }
